# stratum

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
docs/: sv2-explaination.md
examples/interop-cpp/: README.md
examples/sv1-client-and-server/src/: main.rs
examples/sv1-mining-device/: Cargo.toml
examples/sv1-mining-device/src/: client.rs  job.rs  main.rs  miner.rs
examples/translator/src/upstream_sv2/: upstream.rs
protocols/v1/src/: lib.rs
protocols/v2/codec-sv2/src/: error.rs
protocols/v2/messages-sv2/src/: common_properties.rs  job_dispatcher.rs  lib.rs  routing_logic.rs  selectors.rs  utils.rs
protocols/v2/noise-sv2/doc/: encryption_guide.md
protocols/v2/noise-sv2/src/: error.rs  handshake.rs  lib.rs  negotiation.rs
protocols/v2/roles-logic-sv2/: Cargo.toml
protocols/v2/roles-logic-sv2/src/: utils.rs
protocols/v2/sv2-ffi/: sv2.h
protocols/v2/sv2-ffi/src/: lib.rs
roles/jd-client/: Cargo.toml
roles/jd-client/src/: args.rs  main.rs
roles/jd-client/src/lib/: config.rs  error.rs  mod.rs  status.rs
roles/jd-server/: Cargo.toml
roles/jd-server/src/: args.rs
roles/jd-server/src/lib/: config.rs  error.rs  mod.rs  status.rs
roles/mining-proxy/: Cargo.toml
roles/mining-proxy/src/: args.rs
roles/pool/: Cargo.toml
roles/pool/src/: args.rs
roles/translator/src/: args.rs  main.rs
utils/buffer/examples/: buffer_pool_exhaustion.rs
utils/buffer/src/: lib.rs
utils/general-utils-sv2/: Cargo.toml
utils/general-utils-sv2/src/: lib.rs  mutex.rs  send_to.rs
utils/network-helpers/src/: noise_connection_tokio.rs
(+47 files in other folders)
