[package]
name = "sv1-mining-device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.5.1"
async-std = "1.8.0"
futures = "0.3.19"
network_helpers = { path = "../../utils/network-helpers", features=["with_tokio", "with_buffer_pool"] }
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
v1 = { path = "../../protocols/v1" }
