[package]
name = "sv1-mining-device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
v1={path="../../protocols/v1"}
async-std="1.8.0"
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
async-channel = "1.5.1"
bitcoin = "0.27.1"
roles_logic_sv2 = { path = "../../protocols/v2/roles-logic-sv2" }
